[gd_scene load_steps=25 format=2]

[ext_resource path="res://fonts/PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/menu_interface/firstGameScreen.gd" type="Script" id=2]
[ext_resource path="res://sounds/blipSelect.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/click.wav" type="AudioStream" id=4]
[ext_resource path="res://models/worlds/grassland/Background parts/5 - Sky_color.png" type="Texture" id=5]
[ext_resource path="res://models/worlds/grassland/Terrain (16 x 16).png" type="Texture" id=6]
[ext_resource path="res://models/worlds/grassland/Grassland_entities (16 x 16).png" type="Texture" id=7]
[ext_resource path="res://models/worlds/grassland/Background parts/3 - Cloud_cover_1.png" type="Texture" id=8]
[ext_resource path="res://models/worlds/grassland/Background parts/4 - Cloud_cover_2.png" type="Texture" id=9]

[sub_resource type="TileSet" id=10]
0/name = "Terrain (16 x 16).png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Grassland_entities (16 x 16).png 1"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "5 - Sky_color.png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 288, 192 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "4 - Cloud_cover_2.png 3"
3/texture = ExtResource( 9 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 96, 288, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "3 - Cloud_cover_1.png 4"
4/texture = ExtResource( 8 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 288, 96 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=8]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 3 )
Button/styles/focus = SubResource( 4 )
Button/styles/hover = SubResource( 5 )
Button/styles/normal = SubResource( 6 )
Button/styles/pressed = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 21
outline_size = 2
outline_color = Color( 0, 0.619608, 0.760784, 1 )
use_mipmaps = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=27]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 21 )
Button/styles/focus = SubResource( 22 )
Button/styles/hover = SubResource( 23 )
Button/styles/normal = SubResource( 24 )
Button/styles/pressed = SubResource( 25 )

[sub_resource type="DynamicFont" id=28]
size = 21
outline_size = 2
outline_color = Color( 0, 0.619608, 0.760784, 1 )
use_mipmaps = true
font_data = ExtResource( 1 )

[node name="firstGameScreen" type="Node2D"]
position = Vector2( 2, -2 )
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 10 )
format = 1
tile_data = PoolIntArray( 65532, 2, 0, 0, 2, 0, 4, 2, 0, 5, 2, 0, 9, 2, 0, 12, 2, 0, 16, 2, 0, 65540, 4, 0, 65551, 4, 0, 196604, 4, 0, 196607, 4, 0, 131072, 2, 0, 131073, 4, 0, 131076, 2, 0, 131079, 4, 0, 131080, 2, 0, 131082, 4, 0, 131084, 2, 0, 131085, 4, 0, 131088, 4, 0, 262140, 2, 0, 196610, 4, 0, 196612, 4, 0, 196615, 4, 0, 196619, 4, 0, 196624, 2, 0, 262144, 2, 0, 262148, 2, 0, 262152, 2, 0, 262156, 2, 0, 393212, 2, 0, 327696, 2, 0, 458748, 3, 0, 393216, 3, 0, 393220, 3, 0, 393224, 3, 0, 393228, 3, 0, 393232, 3, 0, 524284, 0, 0, 524286, 0, 0, 458752, 0, 0, 458754, 0, 0, 458756, 0, 0, 458758, 0, 0, 458760, 0, 0, 458762, 0, 0, 458764, 0, 0, 458766, 0, 0, 458768, 0, 0, 458770, 0, 0 )

[node name="controls" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 453.0
margin_top = 255.0
margin_right = 579.0
margin_bottom = 399.0
custom_constants/separation = 20
alignment = 1

[node name="start_btn" type="Button" parent="controls"]
margin_right = 126.0
margin_bottom = 21.0
focus_neighbour_top = NodePath("../exit_btn")
theme = SubResource( 8 )
custom_colors/font_color_focus = Color( 0.87451, 0.72549, 0.0352941, 1 )
custom_colors/font_color = Color( 0.929412, 0.862745, 0.862745, 1 )
custom_colors/font_color_hover = Color( 0.972549, 0.12549, 0.12549, 1 )
custom_colors/font_color_pressed = Color( 0.964706, 0.0941176, 0.211765, 1 )
custom_fonts/font = SubResource( 9 )
text = "JOGAR"

[node name="instruction_btn" type="Button" parent="controls"]
margin_top = 41.0
margin_right = 126.0
margin_bottom = 62.0
theme = SubResource( 8 )
custom_colors/font_color_focus = Color( 0.87451, 0.72549, 0.0352941, 1 )
custom_colors/font_color = Color( 0.929412, 0.862745, 0.862745, 1 )
custom_colors/font_color_hover = Color( 0.972549, 0.12549, 0.12549, 1 )
custom_colors/font_color_pressed = Color( 0.964706, 0.0941176, 0.211765, 1 )
custom_fonts/font = SubResource( 9 )
text = "SOBRE"

[node name="return_btn" type="Button" parent="controls"]
margin_top = 82.0
margin_right = 126.0
margin_bottom = 103.0
theme = SubResource( 27 )
custom_colors/font_color_focus = Color( 0.909804, 0.835294, 0.0352941, 1 )
custom_colors/font_color = Color( 0.929412, 0.862745, 0.862745, 1 )
custom_colors/font_color_hover = Color( 0.972549, 0.12549, 0.12549, 1 )
custom_colors/font_color_pressed = Color( 0.952941, 0.054902, 0.117647, 1 )
custom_fonts/font = SubResource( 28 )
text = "VOLTAR"

[node name="exit_btn" type="Button" parent="controls"]
margin_top = 123.0
margin_right = 126.0
margin_bottom = 144.0
focus_neighbour_bottom = NodePath("../start_btn")
theme = SubResource( 8 )
custom_colors/font_color_focus = Color( 0.866667, 0.87451, 0.054902, 1 )
custom_colors/font_color = Color( 0.929412, 0.862745, 0.862745, 1 )
custom_colors/font_color_hover = Color( 0.972549, 0.12549, 0.12549, 1 )
custom_colors/font_color_pressed = Color( 0.929412, 0.0862745, 0.203922, 1 )
custom_fonts/font = SubResource( 9 )
text = "SAIR"

[node name="button_exit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Interface"

[node name="button_pressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Interface"

[connection signal="focus_exited" from="controls/start_btn" to="." method="on_button_exited"]
[connection signal="pressed" from="controls/start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="focus_exited" from="controls/instruction_btn" to="." method="on_button_exited"]
[connection signal="pressed" from="controls/instruction_btn" to="." method="_on_instruction_btn_pressed"]
[connection signal="focus_exited" from="controls/return_btn" to="." method="on_button_exited"]
[connection signal="pressed" from="controls/return_btn" to="." method="_on_return_btn_pressed"]
[connection signal="pressed" from="controls/exit_btn" to="." method="_on_exit_btn_pressed"]
